--- a/Back-End/pyproject.toml
+++ b/Back-End/pyproject.toml
@@ -31,6 +31,7 @@ select = [
 run = 'fastapi dev app/main.py'
 test = 'pytest --cov=app'
 createdb = 'python app/config/init_db.py'
+path = '$env:PYTHONPATH = "."'
 
 [tool.pytest.ini_options]
 pythonpath = "."
