--- a/Back-End/docker-compose.yml
+++ b/Back-End/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     ports:
       - '5432:5432'
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=abacaxi01 
+      - POSTGRES_DB=passcom
