--- a/Back-End/pyproject.toml
+++ b/Back-End/pyproject.toml
@@ -13,6 +13,8 @@ alembic = "^1.13.3"
 greenlet = "^3.1.1"
 asyncpg = "^0.30.0"
 psycopg2 = "^2.9.10"
+fastapi = "^0.115.4"
+uvicorn = "^0.32.0"
 
 
 [tool.poetry.group.dev.dependencies]
