--- a/Back-End/pyproject.toml
+++ b/Back-End/pyproject.toml
@@ -13,8 +13,11 @@ alembic = "^1.13.3"
 greenlet = "^3.1.1"
 asyncpg = "^0.30.0"
 psycopg2 = "^2.9.10"
-fastapi = "^0.115.4"
+fastapi = {extras = ["standard"], version = "^0.115.4"}
 uvicorn = "^0.32.0"
+pwdlib = {extras = ["argon2"], version = "^0.2.1"}
+python-multipart = "^0.0.16"
+pyjwt = "^2.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
