--- a/BackEnd/pyproject.toml
+++ b/BackEnd/pyproject.toml
@@ -18,6 +18,7 @@ uvicorn = "^0.32.0"
 pwdlib = {extras = ["argon2"], version = "^0.2.1"}
 python-multipart = "^0.0.16"
 pyjwt = "^2.9.0"
+psycopg2-binary = "^2.9.10"
 
 
 [tool.poetry.group.dev.dependencies]
