--- a/Back-End/pyproject.toml
+++ b/Back-End/pyproject.toml
@@ -19,6 +19,7 @@ pwdlib = {extras = ["argon2"], version = "^0.2.1"}
 python-multipart = "^0.0.16"
 pyjwt = "^2.9.0"
 psycopg2-binary = "^2.9.10"
+tzdata = "^2024.2"
 
 
 [tool.poetry.group.dev.dependencies]
