--- a/FrontEnd/vendecom/package.json
+++ b/FrontEnd/vendecom/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-loading-indicators": "^1.0.0",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.5.4",
